feat: add routing and ingredient detail page
- Implemented routing using react-router-dom to navigate between Home and IngredientDetail components.
- Added IngredientDetail component to display detailed information about selected dishes.
- Integrated CartContext to manage selected dishes and their ingredients.
- Enhanced Home component with search functionality and category tabs.
- Created DishCard component to display individual dish details and selection options.
- Updated styles in App.css for improved UI/UX.
- Added lucide-react icons for better visual representation.
- Removed unused assets and organized component structure.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>assignment-3</title>
+    <meta name="description" content="Party Menu Selection App - Choose your favorite dishes for the perfect party gathering" />
+    <meta name="keywords" content="party menu, dishes, food, restaurant, selection" />
+    <meta name="author" content="Your Name" />
+    <meta property="og:title" content="Party Menu - Select Your Favorite Dishes" />
+    <meta property="og:description" content="Create the perfect party menu by selecting from our curated collection of dishes" />
+    <meta property="og:type" content="website" />
+    <title>Party Menu Selection App</title>
   </head>
   <body>
     <div id="root"></div>
