--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta property="og:title" content="Party Menu - Select Your Favorite Dishes" />
     <meta property="og:description" content="Create the perfect party menu by selecting from our curated collection of dishes" />
     <meta property="og:type" content="website" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <title>Party Menu Selection App</title>
   </head>
   <body>
